--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TextUtils is a utility which can be used to manipulate your text in the way you want"
+      content="TextUtils is a word counter and character counting  utility which can be used to manipulate your text in the way you want.you can remove  extra spaces, copy the manuplated text as well  as convert your text from uppercase to lowercase and lowercase to uppercase" 
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
    
